# lattice

./: .gitignore  CLAUDE.md  README.md  justfile  team-sprint.config.yaml
.claude/crews/: rust.json  rust.profile.md  typescript.json  typescript.profile.md
.github/workflows/: release.yml
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: app.rs  clv.rs  collector.rs  graph.rs  lib.rs  main.rs  tracing_layer.rs  watcher.rs  wire.rs  ws.rs
crates/backend/src/parser/: mod.rs  treesitter.rs
crates/backend/src/storage/: mod.rs  postgres.rs  sqlite.rs
docs/orignal_specs/: AGENT_PROTOCOL.md  BUILD_PLAN.md  DATA_MODEL.md  README.md  SPEC.md
docs/sprints/: phase-0-walking-skeleton.md  phase-1-hierarchy-lazy-loading.md  phase-10-packaging.md  phase-2-multi-language-treesitter.md  phase-3-doc-extraction.md  phase-4-param-dependency.md  phase-5-clv-collector.md  phase-6-hot-edges.md  phase-7-storage.md  phase-8-agent-layer.md  phase-9-resilience-performance.md
frontend/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  test-setup.ts
frontend/src/lib/: Graph.expanded.harness.svelte  Graph.svelte  Graph.test.ts  HierarchyNode.harness.svelte  HierarchyNode.svelte  MetricsPanel.svelte  MetricsPanel.test.ts  RosterPanel.svelte  RosterPanel.test.ts  Sidebar.svelte  Sidebar.test.ts  layout.agents.test.ts  layout.test.ts  layout.ts  smoke.test.ts  types.ts  ws.test.ts  ws.ts
frontend/src/routes/: +layout.ts  +page.svelte
