[package]
name = "lattice-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lattice_backend"
path = "src/lib.rs"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
notify = "8"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "signal",
] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
