[package]
name = "lattice-backend"
version = "0.1.0"
edition = "2021"
description = "Live code & agent visualiser: a single binary watches a repo, parses it into a structural graph, and serves a lazy drill-down SvelteFlow UI it hosts itself over HTTP + WebSocket."
repository = "https://github.com/linusamcm-source/lattice"
readme = "../../README.md"
license = "MIT OR Apache-2.0"

build = "build.rs"

[lib]
name = "lattice_backend"
path = "src/lib.rs"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
notify = "8"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "signal",
] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "std",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
# Embeds the built SvelteKit UI (`frontend/build/`) into the `lattice` binary so it
# serves the client on its own port (P10-1). `interpolate-folder-path` resolves the
# `$CARGO_MANIFEST_DIR`-relative folder; the default (no `debug-embed`) reads from
# disk in debug builds and embeds the bundle in `--release`.
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[dev-dependencies]
tempfile = "3"
# `test-util` enables paused-clock control (`start_paused`) for deterministic
# timer-driven debounce tests; features unify with the main tokio entry, so this
# stays out of non-test builds.
tokio = { version = "1", features = ["test-util"] }
